--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.activity.ResumoPacoteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.activity.PagamentoActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.activity.ResumoCompraActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
