--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.activity.ListaPacotesActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ui.activity.ResumoPacoteActivity"
             android:exported="true" />
@@ -30,6 +24,16 @@
         <activity
             android:name=".ui.activity.ResumoCompraActivity"
             android:exported="true" />
+        <activity
+            android:name=".ui.activity.SplashScreenActivity"
+            android:theme="@style/AppCompat.TelaCheia"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
